# jbig2enc

./: .clang-format  .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  FORMATTING_STANDARD.md  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PATENTS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  jbig2.cc  jbig2arith.cc  jbig2arith.h  jbig2enc.cc  jbig2enc.h  jbig2enc.html  jbig2pdf.py  jbig2segments.h  jbig2structs.h  jbig2sym.cc  jbig2sym.h  jbig2topdf.py  meson.build  pdf.py  pdfsizeopt-jb2.sh
.github/workflows/: Ruff_python_formater.yml  autotools.yaml  cmake.yaml  meson.yaml  msys2.yaml  release.yaml  stale.yml
doc/: Makefile.am  Makefile.in  PATENTS  jbig2enc.html  meson.build
meson-support/: dist_buildsystems.sh  leptonica-header.h.in  version.sh
src/: Makefile.am  Makefile.in  jbig2.cc  jbig2arith.cc  jbig2arith.h  jbig2comparator.cc  jbig2comparator.h  jbig2enc.cc  jbig2enc.h  jbig2segments.h  jbig2structs.h  jbig2sym.cc  jbig2sym.h  meson.build  result.cc  result.h
subprojects/: leptonica.wrap  libjpeg-turbo.wrap  libtiff.wrap
vs2008/: jbig2enc.sln
vs2008/jbig2/: jbig2.vcproj
vs2008/libjbig2enc/: libjbig2enc.vcproj
